# neovim

./: .busted  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile
.github/workflows/: ci-playground.yml  ci.yml  commitlint.yml  env.sh
ci/: run_lint.sh
cmake/: BustedAddTests.cmake  FindLuaJit.cmake  LuaBusted.cmake  RunTests.cmake
scripts/: run_commitlint.sh  run_uncrustify.sh
src/nvim/: CMakeLists.txt  buffer.c  channel.c  ex_cmds2.c  file_search.c  fileio.c  globals.h  if_cscope.c  macros.h  main.c  mbyte.c  message.c  option.c  option_defs.h  path.c  runtime.c  strings.c  vim.h
src/nvim/api/: vim.c
src/nvim/eval/: funcs.c
src/nvim/lua/: executor.c
src/nvim/msgpack_rpc/: server.c
src/nvim/os/: env.c  fs.c  os_defs.h  signal.c  stdpaths.c  users.c  win_defs.h
src/nvim/tui/: input.c  tui.c
src/xdiff/: xinclude.h
test/: CMakeLists.txt  CTestCustom.in  helpers.lua  preload.lua
test/functional/: helpers.lua
test/functional/editor/: K_spec.lua  fold_spec.lua  jump_spec.lua  mark_spec.lua  undo_spec.lua
test/functional/fixtures/: tty-test.c
test/functional/legacy/: 004_bufenter_with_modelines_spec.lua  005_bufleave_delete_buffer_spec.lua  007_ball_buffer_list_spec.lua  008_autocommands_spec.lua  011_autocommands_spec.lua  012_directory_spec.lua  023_edit_arguments_spec.lua  028_source_ctrl_v_spec.lua  030_fileformats_spec.lua  031_close_commands_spec.lua  036_regexp_character_classes_spec.lua  054_buffer_local_autocommands_spec.lua  060_exists_and_has_functions_spec.lua  061_undo_tree_spec.lua  072_undo_file_spec.lua  074_global_var_in_viminfo_spec.lua  078_swapfile_recover_spec.lua  083_tag_search_with_file_encoding_spec.lua  092_mksession_cursor_cols_utf8_spec.lua  093_mksession_cursor_cols_latin1_spec.lua  096_location_list_spec.lua  102_fnameescape_spec.lua  delete_spec.lua  eval_spec.lua  excmd_spec.lua  fixeol_spec.lua  memory_usage_spec.lua  messages_spec.lua  mksession_spec.lua  source_spec.lua  tagcase_spec.lua
test/functional/vimscript/: system_spec.lua
